Se establece primera versión del programa v0.1

--- a/PhoneBackups/PhoneBackups.csproj
+++ b/PhoneBackups/PhoneBackups.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F389DC08-43E4-46AB-96F7-A8D76E591DD7}</ProjectGuid>
+    <ProjectGuid>{96307EFC-D23F-43FE-B224-332A976DEC0C}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>PhoneBackups</RootNamespace>
     <AssemblyName>PhoneBackups</AssemblyName>
@@ -32,6 +32,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>data-backup-multi-size.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -54,6 +57,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -75,6 +81,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Binarios\adb.exe" />
+    <Content Include="Binarios\AdbWinApi.dll" />
+    <Content Include="Binarios\AdbWinUsbApi.dll" />
+    <Content Include="data-backup-multi-size.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
